# Julice-Camera-Trap

./: README.md  pyproject.toml
configs/: local.mock.toml  station.example.toml
data/BirdNET_Global_Species_Packs/metadata/: cell_index.csv  region_index.csv
docs/: codex_install_prompt.md  field_checklist.md  software_manual.md
scripts/: benchmark_birdnet_chunking.sh  build_birdnet_100mi_species_pack.py  install_julice_camera_trap.sh  install_pi.sh  juara_gdrive_auth_helper  juara_gdrive_sync  juara_git_update  juara_networkpi_maintenance  juara_wifi_watchdog  pi_check_species_filter.py  pi_preflight.sh
scripts/systemd/: juara-wifi-watchdog.service  juara-wifi-watchdog.timer
src/juara_station/: ai.py  cli.py  config.py  csv_exporter.py  paths.py  service.py  species_pack.py  storage.py
systemd/: juara-daily-reboot.timer  juara-gdrive-sync.service.in  juara-gdrive-sync.timer  juara-networkpi-maintenance.service  juara-networkpi-maintenance.timer  juara-service-hourly-reboot.service  juara-service-hourly-reboot.timer
tests/: test_ai.py  test_service_mock.py  test_species_pack.py  test_storage_csv.py
